# django-zxcvbn-password-validator

./: .gitignore  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  coverage.sh  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/workflows/: ci.yaml  codeql.yml  release.yaml
django_zxcvbn_password_validator/: __init__.py  settings.py  test_translate_zxcvbn_text.py  test_zxcvbn_password_validator.py  translate_zxcvbn_text.py  zxcvbn_password_validator.py
django_zxcvbn_password_validator/locale/af/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ak/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/am/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ar/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/as/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/az/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/be/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/bg/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/bn/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/bo/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/br/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/bs/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ca/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ceb/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/co/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/cs/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/cy/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/da/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/de/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ee/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/el/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/eo/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/es/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/et/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/eu/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/fa/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ff/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/fi/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/fil/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/fo/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/fr/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/fy/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ga/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/gd/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/gl/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/gu/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ha/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/haw/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/he/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/hi/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/hr/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/hu/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/hy/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/id/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ig/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/is/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/it/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ja/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/jv/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ka/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/kk/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/km/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/kn/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ko/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ku/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ky/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/la/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/lb/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/lg/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/ln/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/lo/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/lt/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/lv/LC_MESSAGES/: django.mo  django.po
django_zxcvbn_password_validator/locale/mg/LC_MESSAGES/: django.mo  django.po
example/: settings.py  urls.py
example_project/: requirements.txt
example_project/example/: settings.py  urls.py
locale/fr/LC_MESSAGES/: django.po
translation_project/: settings.py  urls.py  wsgi.py
translation_project/management/commands/: generatei18ndict.py
(+135 files in other folders)
