[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=67.5.1",
  "wheel",
]

[project]
name = "django-zxcvbn-password-validator"
version = "1.4.4"
description = "A translatable password validator for django, based on zxcvbn-python."
readme = "README.md"
keywords = [
  "django",
  "password-validator",
  "zxcvbn",
]
license = { text = "MIT" }
authors = [
  { email = "pierre.sassoulas@gmail.com", name = "Pierre SASSOULAS" },
]
requires-python = ">=3.8.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Dutch",
  "Natural Language :: English",
  "Natural Language :: French",
  "Natural Language :: Portuguese (Brazilian)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "django>=2,<6",
  "zxcvbn",
]
optional-dependencies.dev = [
  "coverage",
  "coveralls",
  "django-rosetta",
  "mock",
  "pre-commit>=2.16",
  "pylint>=3.2",
  "pylint-django",
  "python-coveralls",
  "tox",
]
urls."Bug Tracker" = "https://github.com/Pierre-Sassoulas/django-zxcvbn-password-validator/issues"
urls."Source Code" = "https://github.com/Pierre-Sassoulas/django-zxcvbn-password-validator"

[tool.setuptools.packages.find]
include = [
  "django_zxcvbn_password_validator*",
]

[tool.ruff]

line-length = 88
lint.select = [
  "B",      # bugbear
  "D",      # pydocstyle
  "E",      # pycodestyle
  "F",      # pyflakes
  "I",      # isort
  "PGH004", # pygrep-hooks - Use specific rule codes when using noqa
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PYI",    # flake8-pyi
  "RUF",    # ruff
  "T100",   # flake8-debugger
  "UP",     # pyupgrade
  "W",      # pycodestyle
]

lint.ignore = [
  # pydocstyle ignore
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in `__init__`
  "D203", # one-blank-line-before-class`
  # pylint ignore
  "PLR2004", # Magic value used in comparison
]

[tool.pylint.main]

load-plugins = "pylint_django"
django-settings-module = "django_zxcvbn_password_validator.settings"
disable = [
  # I0011 Warning locally suppressed using disable-msg
  "I0011",
  "missing-docstring",  # We don't want docstring everywhere
  "imported-auth-user", # harmful according to django's dev
]

max-line-length = 88
