[metadata]
name = django-zxcvbn-password-validator
version = 1.4.1
license = MIT License
description = A translatable password validator for django, based on zxcvbn-python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pierre-Sassoulas/django-zxcvbn-password-validator
author = Pierre Sassoulas
author_email = pierre.sassoulas@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
